--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,11 +8,11 @@
     tools:context=".MainActivity">
 
     <ImageView
-        android:id="@+id/imagem_logo"
+        android:id="@+id/image_jogar"
         android:layout_width="379dp"
         android:layout_height="173dp"
         android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/botao_jogar"
+        app:layout_constraintBottom_toTopOf="@+id/button_voltar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -20,14 +20,14 @@
         app:srcCompat="@drawable/logo" />
 
     <ImageButton
-        android:id="@+id/botao_jogar"
+        android:id="@+id/button_voltar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imagem_logo"
+        app:layout_constraintTop_toBottomOf="@+id/image_jogar"
         app:srcCompat="@drawable/botao_jogar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
